fix sudden scroll bug on mobile

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -9,10 +9,6 @@ body {
   background-color: #e1dfdd;
 }
 
-.nowrap {
-  white-space: nowrap;
-}
-
 /* hide scrollbar */
 body::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
